# rate-optimiser

./: .gitignore  CITATION.cff  README.md  pyproject.toml
examples/: motor_rate_change.py
notebooks/: benchmark.py  rate_optimiser_demo.py
src/rate_optimiser/: __init__.py  constraints.py  data.py  demand.py  frontier.py  optimiser.py  plotting.py  stochastic.py
tests/: conftest.py  test_constraints.py  test_data.py  test_demand.py  test_frontier.py  test_optimiser.py  test_stochastic.py
