[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rate-optimiser"
version = "0.2.0"
description = "Constrained rate change optimiser for UK personal lines insurance pricing"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" },
]
keywords = [
    "insurance",
    "pricing",
    "optimisation",
    "actuarial",
    "GIPP",
    "rate-change",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=1.24",
    "polars>=0.20",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
stochastic = [
    "cvxpy>=1.4",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "cvxpy>=1.4",
]

[project.urls]
Repository = "https://github.com/burningcost/rate-optimiser"
Issues = "https://github.com/burningcost/rate-optimiser/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rate_optimiser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
